code cleanup pass
updates the capability related stuff to the new registry methods