@@ -86,15 +86,11 @@ public class PlayerDataHandler
             for (final Class<? extends PlayerData> type : PlayerDataHandler.dataMap)
                 try
                 {
-                    final PlayerData toAdd = type.newInstance();
+                    final PlayerData toAdd = type.getConstructor().newInstance();
                     this.data.put(type, toAdd);
                     this.idMap.put(toAdd.getIdentifier(), toAdd);
                 }
-                catch (final InstantiationException e)
-                {
-                    e.printStackTrace();
-                }
-                catch (final IllegalAccessException e)
+                catch (final Exception e)
                 {
                     e.printStackTrace();
                 }
@@ -134,10 +130,10 @@ public class PlayerDataHandler
             PlayerData toAdd;
             try
             {
-                toAdd = type.newInstance();
+                toAdd = type.getConstructor().newInstance();
                 PlayerDataHandler.dataIds.add(toAdd.getIdentifier());
             }
-            catch (InstantiationException | IllegalAccessException e)
+            catch (final Exception e)
             {
                 e.printStackTrace();
             }
